# pcbuilder

./: CMakeLists.txt  LICENSE  buildtypeselection.ui  componenttile.cpp  componenttile.h  computerpart.h  editandmore.cpp  editandmore.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  stackedbudgetbar.cpp  stackedbudgetbar.h
forms/: addcomponentswindow.cpp  addcomponentswindow.h  addcomponentswindow.ui  buildeditdialog.cpp  buildeditdialog.h  buildeditdialog.ui  buildtypeselection.cpp  buildtypeselection.h  mainwindow.cpp  mainwindow.ui
libs/: ComponentsLib.h  ImageCache.h  build.h  case.h  component.h  componentfactory.h  componentlistwidget.h  componenttile.h  componentwidget.h  coolingsystem.h  graphiccard.h  mainwindow.h  motherboard.h  processor.h  psu.h  ram.h  stackedbudgetbar.h  storage.h
resources/db/: request.sql
src/: build.cpp  case.cpp  component.cpp  componentfactory.cpp  componentlistwidget.cpp  componenttile.cpp  componentwidget.cpp  coolingsystem.cpp  editandmore.cpp  graphiccard.cpp  main.cpp  motherboard.cpp  processor.cpp  psu.cpp  ram.cpp  stackedbudgetbar.cpp  storage.cpp
